--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,11 @@
 	font-style: normal;
 }
 /*font-family: 'Cabin Condensed', sans-serif;*/
-
+/*html *
+{
+   
+   font-family: Folio Light !important;
+}*/
 /* Global styles
 ================================================== */
 
@@ -117,14 +121,14 @@ ul{
 ================================================== */
 
 body, p{
-	font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif
+	font-family:"Folio Light";
 	font-weight: 400; 
 	font-size: 14px;
 	line-height: 20px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+	font-family: "Folio Light";
 }
 
 h1{
@@ -268,10 +272,12 @@ h5{
 .header-content {
 	border-bottom: 1px solid#ccc;
 	margin-bottom: 30px;
+	font-family :"Folio Light";
 }
 .header-content span{
 	color: #555;
 	display: none;
+	font-family :"Folio Light";
 }
 
 
@@ -306,7 +312,7 @@ h5{
 	color: #FFF;
 	font-size: 13px;
 	letter-spacing: 1px;
-	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+	font-family: "Folio Light";
 	font-weight: 700;
 }
 .on{
@@ -517,36 +523,43 @@ h5{
 .carousel .item.active .animated2{
 	-webkit-animation: lightSpeedIn 1s ease-in 200ms both;
 	animation: lightSpeedIn 1s ease-in 200ms both;
+	font-family : "Folio Light";
 }
 
 .carousel .item.active .animated3 {
 	-webkit-animation: bounceInLeft 2s ease-in-out 800ms both;
 	animation: bounceInLeft 1.5s ease-in-out 800ms both;
+	font-family : "Folio Light";
 }
 
 .carousel .item.active .animated4 {
 	-webkit-animation: flipInX 2s ease-in 800ms both;
 	animation: flipInX 2s ease-in 800ms both;
+	font-family : "Folio Light";
 }
 
 .carousel .item.active .animated5 {
 	-webkit-animation: bounceInLeft 1s ease-in-out 100ms both;
 	animation: bounceInLeft 1s ease-in-out 100ms both;
+	font-family : "Folio Light";
 }
 
 .carousel .item.active .animated6{
 	-webkit-animation: bounceIn 1s ease-in 500ms both;
 	animation: bounceIn 1s ease-in 500ms both;
+	font-family : "Folio Light";
 }
 
 .carousel .item.active .animated7{
 	-webkit-animation: bounceIn 1s ease-in 500ms both;
 	animation: bounceIn 1s ease-in 500ms both;
+	font-family : "Folio Light";
 }
 
 .carousel .item.active .animated8{
 	-webkit-animation: bounceInDown 1s ease-in 800ms both;
 	animation: bounceInDown 1s ease-in 800ms both;
+	font-family : "Folio Light";
 }
 
 /* Profile section 
@@ -603,13 +616,13 @@ h5{
 =========================*/
 .sub-heading h4{
 	color: #fff;
-	font-family: 'Lora', serif;
+	font-family : "Folio Light";
 	font-size: 28px;
 	margin-bottom: 25px;
 }
 .sub-heading p{
 	color: #fff;
-	font-family: 'Lora', serif;
+	font-family : "Folio Light";
 	margin-top: 20px;
 }
 .line{
@@ -620,6 +633,7 @@ h5{
 }
 .process-desc{
 	margin-top: 60px;
+	font-family :"Folio Light";
 }
 .process-timeline{
 	width: 100%;
@@ -627,10 +641,12 @@ h5{
 	background: none repeat scroll 0% 0% #eee;
 	position: relative;
 	top: 40px;
+	font-family :"Folio Light";
 }
 .single-process, .process-none{
 	width: 16.5%;
 	float: left;
+	font-family :"Folio Light";
 }
 .process-icon{
 	position: relative;
