--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,14 @@
 /* Global styles
 ================================================== */
 
+.icon-box > img {
+	width: 10%;}
+
+
 
 .navbar-brand > img {
 	margin-top: -15px;
-	width: 50%}
+	width: 38%}
 
 html{
 	overflow-x: hidden !important;
@@ -289,11 +293,10 @@ h5{
 }
 
 #tf-menu {
-	padding: 15px;
 	transition: all 0.8s;
 }
 #tf-menu.navbar-default {
-	background-color: rgba(0,0, 0, 0.8);
+	background-color: rgba(0,0, 0, 0.2);
 }
 #tf-menu a.navbar-brand {
 	text-transform: uppercase;
@@ -673,6 +676,8 @@ h5{
 /*-- Portfolio page --*/
 
 #work{
+	background-color: rgba(241, 89, 42, 0.5;
+	opacity:0.8;
 }
 #portfolio{
 	padding: 0 0 40px;
@@ -1489,6 +1494,12 @@ h5{
 /*parralax
 =============*/
 
+section >.parllax-overlay {
+		opacity: 0.5;
+}
+
+
+
 .parallax-overlay{
 	position: absolute;
 	left: 0;
@@ -1496,6 +1507,16 @@ h5{
 	width: 100%;
 	height: 100%;
 	background: url(../images/overaly.png);
+	opacity: 0.7;
+}
+
+.parallax-overlay2{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: url(../images/p2.png);
 }
 
 .parallax1{
