--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,8 @@ left: 10%;
 
 .navbar-brand > img {
 	margin-top: -15px;
-	width: 38%}
+	width: 38%;
+}
 
 html{
 	overflow-x: hidden !important;
