--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,66 @@
 ================================================== */
 
 
+
+.col-md-12 > .col-md-2 {
+	margin-bottom: 5%;
+	}
+
+.contact-info-inner > .container-fluid {
+	margin-left:-15px;
+	}
+
+
+
+#process2 {
+    padding: 120px 0px 110px;
+}
+
+.fixedG {
+	transition:scale (1.1);
+    background: transparent url(../images/parallax/bg3.jpg) repeat fixed 70% 30%;
+}
+
+.fixedG2 {
+    background: transparent url(../images/parallax/p1.jpg) repeat fixed 50% 40%;
+}
+
+.fixedG3 {
+    background: transparent url(../images/parallax/p4.jpg) repeat fixed 50% 40%;
+}
+
+
+
+
 .m10 {
 margin: 10px 0px;
 }
 
+.Flexible-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.Flexible-container iframe,   
+.Flexible-container object,  
+.Flexible-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
+
 iframe {
-width:900;
+width:100%;
 height:350;
 border:none;
 margin-top:-20px
@@ -45,7 +99,7 @@ margin-top:-20px
 		}
 
 .col-md-2 > a >img {
-			width:120px;
+			width:90px;
 			}
 		
 		
@@ -195,7 +249,7 @@ left: 10%;
 } 
 
 .icon-box > img {
-	width: 10%;
+	width: 8%;
 }
 
 .navbar-brand > img {
@@ -416,7 +470,7 @@ h5{
 	line-height: 50px;
 	text-transform: uppercase;
 	width: 35%;
-	margin:0 auto;
+	margin:20px auto;
 	padding: 40px 0px;
 }
 .sub-title{
@@ -1348,9 +1402,9 @@ figure.effect-oscar:hover img {
 	top: 0;
 	z-index: 2;
 	background: rgba(0,0,0,.7);
-	padding:5px 10px;
+	padding:5px 10px 15px 35px;
 	max-width: 570px;
-	max-height: 400px;
+	max-height: 350px;
 	text-align: left;
 	right: 0px;
 }
@@ -1760,13 +1814,13 @@ figure.effect-oscar:hover img {
 
 
 .parallax1{
-	background: url(../images/bg/bg5.jpg) fixed 50% 50%;
+	background: url(../images/parallax/p4.jpg) fixed 50% 30%;
 }
 .parallax2{
-	background: url(../images/parallax/parallax5.jpg) no-repeat fixed 50% 50%;
+	background: url(../images/parallax/bg5.jpg) no-repeat fixed 50% 50%;
 }
 .parallax3{
-	background: url(../images/parallax/parallax2.jpg) fixed 50% 50%;
+	background: url(../images/parallax/p3.jpg) repeat fixed 50% 50%;
 }
 .parallax4{
 	background: url(../images/parallax/contact-bg.jpg) fixed 50% 50%;
